macros/entity_macros/tests/ui/attribute/simple_ent/conflicting-field-named-id.stderr
error[E0124]: field `id` is already declared
 --> $DIR/conflicting-field-named-id.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^ field already declared
...
7 |     id: usize,
  |     --------- `id` first declared here
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0124]: field `id` is already declared
 --> $DIR/conflicting-field-named-id.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^
  | |
  | field already declared
  | `id` first declared here
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0201]: duplicate definitions with name `where_id`:
 --> $DIR/conflicting-field-named-id.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^
  | |
  | previous definition of `where_id` here
  | duplicate definition
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0201]: duplicate definitions with name `id`:
 --> $DIR/conflicting-field-named-id.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^
  | |
  | previous definition of `id` here
  | duplicate definition
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
