macros/entity_macros/tests/ui/attribute/simple_ent/conflicting-field-named-id.rs
use entity::{simple_ent, Ent};

#[simple_ent]
#[derive(Clone, Ent)]
pub struct SimpleEnt {
    #[ent(field)]
    id: usize,
}

fn main() {}
